# AI-Co-Pilot-for-SaaS-Analytics-Platform

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7a26588ba59c_initial_migration.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  copilot.py
backend/app/core/: config.py  rbac.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/guard/: injection_guard.py
backend/app/orchestrator/: orchestrator.py  tools.py
backend/app/streaming/: sse.py
backend/app/validator/: query_validator.py
backend/tests/: benchmark.py  conftest.py  test_auth.py  test_injection_guard.py  test_orchestrator.py  test_rbac.py  test_sse.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PROMPT_FOR_ANTIGRAVITY.md  README.md  SECURITY.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: Chat.tsx
frontend/src/components/login/: Login.tsx
