[project]
name = "ai-copilot-saas-analytics-backend"
version = "0.1.0"
description = "Backend for SaaS Analytics AI Co-Pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "anthropic>=0.30.1",
    "sse-starlette>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0,<5.0.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "faker>=25.8.0",
    "structlog>=24.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.10",
    "black>=24.4.2"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
